Needed to unhide things in css to show cards

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </h2>
         </section>
 
-        <section class="streaming-service" data-index="2">
+        <section class="streaming-service" id="hidden" data-index="2">
           <!-- Modal alert for services -->
             <div class="modal" id="service-modal">
                 <div class="modal-content">
@@ -57,7 +57,7 @@
             </div>
         </section>
 
-        <section class="genres" data-index="3">
+        <section class="genres" id="hidden" data-index="3">
             <!-- Modal alert for genres -->
             <div class="modal" id="genre-modal">
                 <div class="modal-content">
@@ -134,7 +134,7 @@
             </div>
         </section>
 
-        <section class="series-movie" data-index="4">
+        <section class="series-movie" id="hidden" data-index="4">
             <!-- Modal alert for type -->
             <div class="modal" id="type-modal">
                 <div class="modal-content">
@@ -158,7 +158,7 @@
             </div>
         </section>
 
-        <section class="results" data-index="5">
+        <section class="results" id="hidden" data-index="5">
             <div class="show-container">
                 <video id="myVideo" width="320" height="176">
                     <script src="#" type="video/mp4"></script>
