--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
         </section>
 
         <section class="results" id="hidden" data-index="5">
+            <img src="" class="img-fluid">
             <div class="show-container">
                 <video id="myVideo" width="320" height="176">
                     <script src="#" type="video/mp4"></script>
