--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     
     <link rel="stylesheet" href="./assets/style.css">
 </head>
+
 <body>
     <div id="entire-container">
         <section class="landing-page" data-index="1">
@@ -142,13 +143,13 @@
                     <p>Please select a type before continuing</p>
                 </div>
             </div>
-            <h1 class="hello">Movie or show? 
+            <h1 class="hello">Movie or Series? 
                 <br>
                 You make the call.</h1>
                 
             <div class="btn-group" id="type-btn-container" role="group" aria-label="Basic outlined example">
-               <input type="radio" id="show" name="type" value="Show">
-                    <label for="show">Show</label> 
+               <input type="radio" id="series" name="type" value="series">
+                    <label for="series">Series</label> 
                     <input type="radio" id="movie" name="type" value="Movie">
                     <label for="movie">Movie</label>  
             </div>
