Created back btns

--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
                 Hello,
             </h1>
 
-            <div class="arrow-icon-container">
-                <i class="gg-push-chevron-right-o proceed" id="btn"></i>
-            </div>
-
             <h2>
-                Let's find something to watch.
+                let's find something to watch.
             </h2>
+
+            <div class="index-btn-container">
+                <div class="arrow-icon-container">
+                    <i class="gg-push-chevron-right-o proceed"></i>
+                </div>
+            </div>
         </section>
 
         <section class="streaming-service" id="hidden" data-index="2">
@@ -53,8 +55,14 @@
                     <label for="disney">Disney+</button>
             </div>
 
-            <div class="arrow-icon-container">
-                <i class="gg-push-chevron-right-o proceed" id="service-btn"></i>
+            <div class="index-btn-container">
+                <div class="arrow-icon-container">
+                    <i class="gg-push-chevron-right-o back"></i>
+                </div>
+
+                <div class="arrow-icon-container">
+                    <i class="gg-push-chevron-right-o proceed" id="service-btn"></i>
+                </div>
             </div>
         </section>
 
@@ -130,8 +138,14 @@
                     <div class="display"><label for="10767">Talk Show</label></div>
             </div>
 
-            <div class="arrow-icon-container">
-                <i class="gg-push-chevron-right-o proceed" id="genre-btn"></i>
+            <div class="index-btn-container">
+                <div class="arrow-icon-container">
+                    <i class="gg-push-chevron-right-o back"></i>
+                </div>
+
+                <div class="arrow-icon-container">
+                    <i class="gg-push-chevron-right-o proceed" id="genre-btn"></i>
+                </div>
             </div>
         </section>
 
@@ -154,8 +168,10 @@
                     <label for="movie">Movie</label>  
             </div>
 
-            <div class="arrow-icon-container">
-                <i class="gg-push-chevron-right-o" id="generate-shows"></i>
+            <div class="index-btn-container">
+                <div class="arrow-icon-container">
+                    <i class="gg-push-chevron-right-o generate" id="generate-shows"></i>
+                </div>
             </div>
         </section>
 
