Adjusted spelling error and re-added background image call

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
           
             <h1 class="hello">
-                 What's your prefered streaming service?
+                 What's your preferred streaming service?
             </h1>
 
             <div class="btn-group" id="services-btn-container" role="group" aria-label="Basic outlined example">
