Added a loading page

--- a/index.html
+++ b/index.html
@@ -175,7 +175,11 @@
             </div>
         </section>
 
-        <section class="results" id="hidden" data-index="5">
+        <section class="loading-page" id="hidden" data-index="5">
+            <span class="loader"><span class="loader-inner"></span></span>
+        </section>
+
+        <section class="results" id="hidden" data-index="6">
             <img src="" class="img-fluid">
             <div class="show-container">
                 <video id="myVideo" width="320" height="176">
