Added no shows found page

--- a/index.html
+++ b/index.html
@@ -202,6 +202,12 @@
                 </video>
             </div>
         </section>
+
+        <section class="no-shows-found" id="hidden">
+            <h1>
+                No shows found
+            </h1>
+        </section>
     </div>
 
     <script src="./assets/script.js"></script>
