--- a/index.html
+++ b/index.html
@@ -211,6 +211,12 @@
                 No shows found
             </h1>
         </section>
+
+        <section class="errors" id="hidden">
+            <h1>
+                Error 
+            </h1>
+        </section>
     </div>
 
     <script src="./assets/script.js"></script>
