Added back btn to type question

--- a/index.html
+++ b/index.html
@@ -168,10 +168,13 @@
                     <label for="movie">Movie</label>
                 <input type="radio" id="series" name="type" value="series">
                     <label for="series">Series</label> 
-                  
             </div>
 
             <div class="index-btn-container">
+                <div class="arrow-icon-container">
+                    <i class="gg-push-chevron-right-o back"></i>
+                </div>
+                
                 <div class="arrow-icon-container">
                     <i class="gg-push-chevron-right-o generate" id="generate-shows"></i>
                 </div>
