Finished results page content

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <div class="arrow-icon-container">
                     <i class="gg-push-chevron-right-o back"></i>
                 </div>
-                
+
                 <div class="arrow-icon-container">
                     <i class="gg-push-chevron-right-o generate" id="generate-shows"></i>
                 </div>
@@ -185,27 +185,35 @@
             <span class="loader"><span class="loader-inner"></span></span>
         </section>
 
-        <section class="results" id="hidden" data-index="6">
-            <img src="" class="img-fluid">
+        <section class="results" data-index="6" id="hidden">
             <div class="show-container">
-                <video id="myVideo" width="320" height="176">
-                    <script src="#" type="video/mp4"></script>
-                    Your browser does not support HTML5 video.
-                </video>
+                <div id="picture-container"></div>
+
+                <div id="show-information-container">
+                    <div class="title-year-container">
+
+                    </div>
+                </div>
             </div>
 
             <div class="show-container">
-                <video id="myVideo" width="320" height="176">
-                    <source src="#" type="video/mp4">
-                    Your browser does not support HTML5 video.
-                </video>
+                <div id="picture-container"></div>
+
+                <div id="show-information-container">
+                    <div class="title-year-container">
+
+                    </div>
+                </div>
             </div>
 
             <div class="show-container">
-                <video id="myVideo" width="320" height="176">
-                    <script src="#" type="video/mp4"></script>
-                    Your browser does not support HTML5 video.
-                </video>
+                <div id="picture-container"></div>
+
+                <div id="show-information-container">
+                    <div class="title-year-container">
+
+                    </div>
+                </div>
             </div>
         </section>
 
