Added function that deletes unused results container and hopefully I also fixed duplication

--- a/index.html
+++ b/index.html
@@ -186,6 +186,10 @@
         </section>
 
         <section class="results" data-index="6" id="hidden">
+            <h1>
+                Here are your results
+            </h1>
+
             <div class="show-container">
                 <div id="picture-container"></div>
 
