Genres needed to be radio not checkbox

--- a/index.html
+++ b/index.html
@@ -82,61 +82,61 @@
             </h1>
 
             <div class="btn-group" id="genres-btn-container" role="group" aria-label="Basic outlined example">
-                <input type="checkbox" id="1" name="genre" value="Biography">
+                <input type="radio" id="1" name="genre" value="Biography">
                     <label for="1">Biography</label>
-                <input type="checkbox" id="2" name="genre" value="Film-Noir">
+                <input type="radio" id="2" name="genre" value="Film-Noir">
                     <label for="2">Film Noir</label>
-                <input type="checkbox" id="3" name="genre" value="Game-Show">
+                <input type="radio" id="3" name="genre" value="Game-Show">
                     <label for="3">Game Show</label>
-                <input type="checkbox" id="4" name="genre" value="Musical">
+                <input type="radio" id="4" name="genre" value="Musical">
                     <label for="4">Musical</label>
-                <input type="checkbox" id="5" name="genre" value="Sport">
+                <input type="radio" id="5" name="genre" value="Sport">
                     <label for="5">Sport</label>
-                <input type="checkbox" id="6" name="genre" value="Short">
+                <input type="radio" id="6" name="genre" value="Short">
                     <label for="6">Short</label>
-                <input type="checkbox" id="7" name="genre" value="Adult">
+                <input type="radio" id="7" name="genre" value="Adult">
                     <label for="7">Adult</label>
-                <input type="checkbox" id="12" name="genre" value="Adventure">
+                <input type="radio" id="12" name="genre" value="Adventure">
                     <label for="12">Adventure</label>
-                <input type="checkbox" id="14" name="genre" value="Fantasy">
+                <input type="radio" id="14" name="genre" value="Fantasy">
                     <label for="14">Fantasy</label>
-                <input type="checkbox" id="16" name="genre" value="Animation">
+                <input type="radio" id="16" name="genre" value="Animation">
                     <label for="16">Animation</label>
-                <input type="checkbox" id="18" name="genre" value="Drama">
+                <input type="radio" id="18" name="genre" value="Drama">
                     <label for="18">Drama</label>
-                <input type="checkbox" id="27" name="genre" value="Horror">
+                <input type="radio" id="27" name="genre" value="Horror">
                     <label for="27">Horror</label>
-                <input type="checkbox" id="28" name="genre" value="Action">
+                <input type="radio" id="28" name="genre" value="Action">
                     <label for="28">Action</label>
-                <input type="checkbox" id="35" name="genre" value="Comedy">
+                <input type="radio" id="35" name="genre" value="Comedy">
                     <label for="35">Comedy</label>
-                <input type="checkbox" id="36" name="genre" value="History">
+                <input type="radio" id="36" name="genre" value="History">
                     <label for="36">History</label>
-                <input type="checkbox" id="37" name="genre" value="Western">
+                <input type="radio" id="37" name="genre" value="Western">
                     <label for="37">Western</label>
-                <input type="checkbox" id="53" name="genre" value="Thriller">
+                <input type="radio" id="53" name="genre" value="Thriller">
                     <label for="53">Thriller</label>
-                <input type="checkbox" id="80" name="genre" value="Crime">
+                <input type="radio" id="80" name="genre" value="Crime">
                     <label for="80">Crime</label>
-                <input type="checkbox" id="99" name="genre" value="Documentary">
+                <input type="radio" id="99" name="genre" value="Documentary">
                     <label for="99">Documentary</label>
-                <input type="checkbox" id="878" name="genre" value="Science-Fiction">
+                <input type="radio" id="878" name="genre" value="Science-Fiction">
                     <label for="878">Science Fiction</label>
-                <input type="checkbox" id="9648" name="genre" value="Mystery">
+                <input type="radio" id="9648" name="genre" value="Mystery">
                     <label for="9648">Mystery</label>
-                <input type="checkbox" id="10402" name="genre" value="Music">
+                <input type="radio" id="10402" name="genre" value="Music">
                     <label for="10402">Music</label>
-                <input type="checkbox" id="10749" name="genre" value="Romance">
+                <input type="radio" id="10749" name="genre" value="Romance">
                     <label for="10749">Romance</label>
-                <input type="checkbox" id="10751" name="genre" value="Family">
+                <input type="radio" id="10751" name="genre" value="Family">
                     <label for="10751">Family</label>
-                <input type="checkbox" id="10752" name="genre" value="War">
+                <input type="radio" id="10752" name="genre" value="War">
                     <label for="10752">War</label>
-                <input type="checkbox" id="10763" name="genre" value="News">
+                <input type="radio" id="10763" name="genre" value="News">
                     <label for="10763">News</label>
-                <input type="checkbox" id="10764" name="genre" value="Reality">
+                <input type="radio" id="10764" name="genre" value="Reality">
                     <label for="10764">Reality</label>
-                <input type="checkbox" id="10767" name="genre" value="Talk-Show">
+                <input type="radio" id="10767" name="genre" value="Talk-Show">
                     <label for="10767">Talk Show</label>
             </div>
 
