--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
             </h1>
 
             <div class="btn-group" id="services-btn-container" role="group" aria-label="Basic outlined example">
-                <input type="checkbox" id="netflix" name="platform" value="Netflix">
+                <input type="radio" id="netflix" name="platform" value="Netflix">
                     <label for="netflix">Netflix</label>
-                <input type="checkbox" id="hulu" name="platform" value="Hulu">
+                <input type="radio" id="hulu" name="platform" value="Hulu">
                     <label for="hulu">Hulu</label>
-                <input type="checkbox" id="apple" name="platform" value="AppleTV Plus">
+                <input type="radio" id="apple" name="platform" value="AppleTV Plus">
                     <label for="apple">AppleTV Plus</label>
-                <input type="checkbox" id="prime" name="platform" value="AmazonPrime Video">
+                <input type="radio" id="prime" name="platform" value="AmazonPrime Video">
                     <label for="prime">AmazonPrime Video</label>
-                <input type="checkbox" id="hbo" name="platform" value="HBO Max">
+                <input type="radio" id="hbo" name="platform" value="HBO Max">
                     <label for="hbo">HBO Max</label>
-                <input type="checkbox" id="disney" name="platform" value="Disney+">
+                <input type="radio" id="disney" name="platform" value="Disney+">
                     <label for="disney">Disney+</button>
             </div>
 
@@ -190,7 +190,7 @@
                 Here are your results
             </h1>
 
-            <div class="show-container">
+            <div class="show-container" data-filled="false">
                 <div id="picture-container"></div>
 
                 <div id="show-information-container">
@@ -200,7 +200,7 @@
                 </div>
             </div>
 
-            <div class="show-container">
+            <div class="show-container" data-filled="false">
                 <div id="picture-container"></div>
 
                 <div id="show-information-container">
@@ -210,7 +210,7 @@
                 </div>
             </div>
 
-            <div class="show-container">
+            <div class="show-container" data-filled="false">
                 <div id="picture-container"></div>
 
                 <div id="show-information-container">
