resize genre btn-group

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </section>
 
-        <section class="streaming-service" id="hidden" data-index="2">
+        <section class="streaming-service"  data-index="2">
           <!-- Modal alert for services -->
             <div class="modal" id="service-modal">
                 <div class="modal-content">
@@ -47,6 +47,8 @@
                     <label for="netflix">Netflix</label>
                 <input type="radio" id="hulu" name="platform" value="Hulu">
                     <label for="hulu">Hulu</label>
+                <input type="radio" id="apple" name="platform" value="AppleTV Plus">
+                    <label for="apple">AppleTV Plus</label>
                 <input type="radio" id="prime" name="platform" value="AmazonPrime Video">
                     <label for="prime">AmazonPrime Video</label>
                 <input type="radio" id="hbo" name="platform" value="HBO Max">
@@ -66,7 +68,7 @@
             </div>
         </section>
 
-        <section class="genres" id="hidden" data-index="3">
+        <section class="genres"  data-index="3">
             <!-- Modal alert for genres -->
             <div class="modal" id="genre-modal">
                 <div class="modal-content">
@@ -149,7 +151,7 @@
             </div>
         </section>
 
-        <section class="series-movie" id="hidden" data-index="4">
+        <section class="series-movie"  data-index="4">
             <!-- Modal alert for type -->
             <div class="modal" id="type-modal">
                 <div class="modal-content">
@@ -180,11 +182,11 @@
             </div>
         </section>
 
-        <section class="loading-page" id="hidden" data-index="5">
+        <section class="loading-page"  data-index="5">
             <span class="loader"><span class="loader-inner"></span></span>
         </section>
 
-        <section class="results" data-index="6" id="hidden">
+        <section class="results" data-index="6" >
             <h1>
                 Here are your results
             </h1>
